--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,10 +11,18 @@ body {
      width: 200px;
      margin: 10px;
  } 
+
+ .body_container {
+     background-color: lightblue;
+     
+     margin-left: auto;
+     margin-right: auto;
+  
+ }
  
  h1 {
      
-    background-color:  #4aaaa5;
+    background-color:  cornflowerblue;
     color: #ffffff;
     padding: 20px;
     
@@ -49,7 +57,7 @@ body {
 
  
  h2{
-    color: #4aaaa5; 
+    color:black; 
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 
@@ -66,6 +74,10 @@ h3{
     color: #ffffff;
     
     
+}
+
+.footer{
+    text-align: center;
 }
 
 
